--- a/css/main.css
+++ b/css/main.css
@@ -24,13 +24,15 @@ body {
 
 .ryu-ready,
 .ryu-still,
-.ryu-throwing {
+.ryu-throwing,
+.ryu-cool {
   width: 659px;
   height: 494px;
 }
 
 .ryu-ready,
-.ryu-throwing {
+.ryu-throwing,
+.ryu-cool {
   display: none;
 }
 
@@ -46,10 +48,15 @@ body {
   background-image: url("../images/ryu-throwing-hadouken.png");
 }
 
+.ryu-cool {
+  background-image: url("../images/ryu-cool.gif");
+}
+
 .hadouken,
 .ryu-ready,
 .ryu-still,
-.ryu-throwing {
+.ryu-throwing,
+.ryu-cool {
   background-repeat: no-repeat;
 }
 
@@ -63,4 +70,31 @@ body {
   float: left;
   position: absolute;
   z-index: 10;
+}
+
+.text-content {
+  color: black;
+  position: absolute;
+  left: 650px;
+  height: 425px;
+  width: 600px;
+  padding-top: 75px;
+}
+
+.how-to {
+  color: red;
+  width: 600px;
+  text-decoration: solid;
+}
+
+.how-to p {
+  width: 50%;
+  color: black;
+  font-size: 24px;
+  line-height: 45px;
+}
+
+.how-to p + p {
+  margin-left: 275px;
+  top: 300px;
 }
